[package]
name = "rost"
version = "0.1.0"
edition = "2021"


[package.metadata.bootimage]
# Enable QEMU's isa-debug-exit device, which exits QEMU when port 0xf4 is written to.
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
volatile = "0.2.6"
x86_64 = "0.14.10"

